--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "url": "https://github.com/vilkup/class-renamer/issues"
   },
   "homepage": "https://github.com/vilkup/class-renamer#readme",
-  "dependencies": {
-    "@metarhia/common": "^2.2.0",
-    "lodash": "^4.17.21"
+  "devDependencies": {
+    "jest": "^28.1.2"
   }
 }
